--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+amqp==2.6.1
 appnope==0.1.0
 asgiref==3.2.10
 backcall==0.2.0
+billiard==3.6.3.0
+celery==4.4.7
 decorator==4.4.2
 -e git://github.com/django/django.git@eaf9764d3bb25970da89de5799d8d308715628ba#egg=Django
 ipython==7.18.1
 ipython-genutils==0.2.0
 jedi==0.17.2
+kombu==4.6.11
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -15,4 +19,5 @@ Pygments==2.7.0
 pytz==2020.1
 sqlparse==0.3.1
 traitlets==5.0.4
+vine==1.3.0
 wcwidth==0.2.5
